# vitagen

./: .gitignore  LICENSE  README.md  pyproject.toml  vitagen.py
templates/classic/: template.tex.j2
templates/modern/: template.tex.j2
user-cv/data/: certificates.yaml  education.yaml  languages.yaml  locale.yaml.example  personal.yaml  skills.yaml
user-cv/data/experience/: demo-consulting.yaml  example-software.yaml  sample-security-group.yaml
vitagen/: __init__.py  __main__.py  cli.py  dates.py  filter.py  i18n.py  languages.yaml  loader.py  model.py  naming.py  paths.py  validator.py
vitagen/renderer/: __init__.py  base.py  latex.py
